--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="initial">
         <b>C</b>
     </div>
-    <div id="user">Hello, <b>CHUKWUEMEKA</b> <i>!</i></div>  
+    <div id="user">Helllo, <b>CHUKWUEMEKA</b> <i>!</i></div>  
     <form>
         <input type="password" name="pwd" id="pwd" placeholder="password" required>
         <button type="button" id="eye"> </button>
