responsive design changes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="initial">
         <b>C</b>
     </div>
-    <div id="user">Helllo, <b>CHUKWUEMEKA</b> <i>!</i></div>  
+    <div id="user">Hi, <b>CHUKWUEMEKA</b> <i>!</i></div>  
     <form>
         <input type="password" name="pwd" id="pwd" placeholder="password" required>
         <button type="button" id="eye"> </button>
@@ -22,8 +22,8 @@
                 <div id="flag"></div>
                 <div id="username">@ede_chukwuemeka</div>
                 <div id="job">student</div>
-                <div id="age">11 <sup>yr</sup></div>
-                <div id="dob">June 28, 2014</div>
+                <div id="age">11<sup>yr</sup></div>
+                <div id="dob"></div>
             </div>
             <button type = "button" id= "start">
                 <div></div>
