--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <div id="job">student</div>
                 <div id="age">11<sup>yr</sup></div>
                 <div id="dob"></div>
+                <a href="wordsmith.html">WS</a>
             </div>
             <button type = "button" id= "start">
                 <div></div>
