--- a/wordsmith.html
+++ b/wordsmith.html
@@ -22,7 +22,7 @@
         <span class="tile" id="iru">E</span>
     </div>
     <div id="hint">
-        <div id="bulb">r</div>
+        <div id="bulb"></div>
         <div id="txt">To walk unsteadily, as like a baby</div>
     </div>
         <div id="action">
@@ -32,12 +32,13 @@
                 <i>0</i>
             </span>
             <button type="button" id="checkBtn">
-
+                <span>CHECK</span>
+                <i></i>
             </button>
         </div>
         <footer>
             <div id="author">&commat;ede_chukwuemeka | 2025</div>
         </footer>
-    
+        <script src="wordsmith.js"></script>
 </body>
 </html>
